fix z-index issue on the profileimage (#637)

--- a/src/routes/habitat/components/StreamProfile/info/style.scss
+++ b/src/routes/habitat/components/StreamProfile/info/style.scss
@@ -41,7 +41,6 @@
   width: 120px;
   height: 120px;
   position: relative;
-  z-index: 10;
   border: 4px solid white;
   border-radius: 50%;
 
